@@ -4,8 +4,19 @@ from pyramid.interfaces import ITemplateRenderer
 from pyramid.decorator import reify
 from pyramid import renderers
 
+from chameleon.zpt.template import PageTemplateFile
+
 def renderer_factory(info):
     return renderers.template_renderer_factory(info, ZPTTemplateRenderer)
+
+class PyramidPageTemplateFile(PageTemplateFile):
+    def cook(self, body):
+        PageTemplateFile.cook(self, body)
+        if self.macro:
+            # render only the portion of the template included in a
+            # define-macro named the value of self.macro
+            macro_renderer = self.macros[self.macro].include
+            self._render = macro_renderer
 
 @implementer(ITemplateRenderer)
 class ZPTTemplateRenderer(object):
@@ -16,18 +27,13 @@ class ZPTTemplateRenderer(object):
 
     @reify # avoid looking up reload_templates before manager pushed
     def template(self):
-        from chameleon.zpt.template import PageTemplateFile
-        tf = PageTemplateFile(
+        tf = PyramidPageTemplateFile(
             self.path,
             auto_reload=self.lookup.auto_reload,
             debug=self.lookup.debug,
-            translate=self.lookup.translate
+            translate=self.lookup.translate,
+            macro=self.macro,
             )
-        if self.macro:
-            # render only the portion of the template included in a
-            # define-macro named the value of self.macro
-            macro_renderer = tf.macros[self.macro].include
-            tf._render = macro_renderer
         return tf
 
     def implementation(self):
